package ca.mcmaster.se2aa4.island.team205;

public enum Action {
    FLY,
    SCAN,
    ECHOF,
    ECHOL,
    ECHOR,
    TURN,
    NONE
}
